--- a/Exercise4_Digg_Webshop/appsettings.json
+++ b/Exercise4_Digg_Webshop/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sql": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\_.NET_Core_Projects\\Exercise4_Digg_Webshop\\Exercise4_Digg_Webshop\\Data\\Product-db.mdf;Integrated Security=True;Connect Timeout=30"
+    "Sql": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\_.NET_Core_Projects\\Exercise4_Digg_Webshop\\Exercise4_Digg_Webshop\\Data\\Digg-Products-db.mdf;Integrated Security=True;Connect Timeout=30",
+    "Sql2": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Projects\\_.NET_Core_Projects\\Exercise4_Digg_Webshop\\Exercise4_Digg_Webshop\\Data\\Digg-Identity-db.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
